spotify/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-server
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: spotify-server
  template:
    metadata:
      labels:
        app: spotify-server
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: server
          image: ghcr.io/noeulnight/spotify-stat-server
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-web
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: spotify-web
  template:
    metadata:
      labels:
        app: spotify-web
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: web
          image: ghcr.io/noeulnight/spotify-stat-client
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-canvas-api
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: spotify-canvas-api
  template:
    metadata:
      labels:
        app: spotify-canvas-api
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: web
          image: ghcr.io/noeulnight/spotify-canvas-api
          ports:
            - containerPort: 3000
