spotify/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-server
  template:
    metadata:
      labels:
        app: spotify-server
    spec:
      containers:
        - name: server
          image: yooooomi/your_spotify_server
          ports:
            - containerPort: 8080
