spotify/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spotify-server-service
spec:
  selector:
    app: spotify-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
