spotify/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spotify-web-service
spec:
  selector:
    app: spotify-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
