spotify/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - host: spotify.limtaehyun.dev
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: spotify-server-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-web-service
                port:
                  number: 3000
